# Todo-api-fork

./: README.md  pyproject.toml
.github/workflows/: ci.yml
backend/config/: urls.py
backend/todos/: models.py  serializers.py  tests.py  views.py
config/: settings.py
todos/: admin.py  tests.py
todos/migrations/: 0001_initial.py
